--- a/app/src/main/resources/admin/orders/templates/order.html
+++ b/app/src/main/resources/admin/orders/templates/order.html
@@ -65,6 +65,10 @@
                                 <div class="order-value" data-th-text="${cart.phone}"></div>
                             </div>
                         </div>
+                        <div class="order-row" data-th-if="${cart.comment}">
+                            <h3 class="order-label">Comment:</h3>
+                            <div data-th-text="${cart.comment}"></div>
+                        </div>
                         <div class="order-row">
                             <h3 class="order-label">Items:</h3>
                             <div class="order-value">
