--- a/app/src/main/resources/site/pages/user/components/userEditModal.html
+++ b/app/src/main/resources/site/pages/user/components/userEditModal.html
@@ -33,6 +33,29 @@
                         <input data-th-value="${user.data.phone} ? ${user.data.phone} : ''" name="phone" type="text"
                             class="input-text" id="phone-user-input" />
                     </div>
+                    <div class="form-group">
+                        <label for="postal-code-user-input" class="label">Почтовый индекс</label>
+                        <input data-th-value="${user.data.postalCode} ? ${user.data.postalCode} : ''" name="postalCode"
+                            type="text" class="input-text" id="postal-code-user-input" />
+                    </div>
+                    <div class="form-group">
+                        <label for="country-user-input" class="label">Страна</label>
+                        <select name="country" id="country-user-input">
+                            <option value="Выберите страну" disabled="disabled"
+                                data-th-selected="${!user or !user.data.country}">
+                                Выберите
+                                страну</option>
+                            <option data-th-value="${country.code}" data-th-each="country: ${countries.countries}"
+                                data-th-selected="${user && user.data.country == country.code}"
+                                data-th-text="${portal.localize({'_key=countries.' + country.code, '_locale=ru'})}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="address-user-input" class="label">Адрес</label>
+                        <input data-th-value="${user.data.address} ? ${user.data.address} : ''" name="address"
+                            type="text" class="input-text" id="address-user-input" />
+                    </div>
                     <input name="id" type="hidden" data-th-value="${user._id}" />
                     <input name="action" type="hidden" value="edit" />
                     <button type="submit" class="modal-btn modal-btn-remove">
