attachment part refactoring, added attachment to article editor

--- a/app/src/main/resources/services/newArticle/components/video.html
+++ b/app/src/main/resources/services/newArticle/components/video.html
@@ -2,7 +2,7 @@
     data-th-class="${'create_article-video_editor js_video-editor js_single-part js_single-part-' + id}">
     <div data-th-remove="tag">
         <input type="text" class="create_article-video_editor-input" />
-        <button type="text" class="create_article-video_editor-btn button button-dark">загрузить видео</button>
+        <button type="text" class="create_article-video_editor-btn button button-dark">Загрузить видео</button>
     </div>
     <div class="create_article-editor_actions">
         <div class="create_article-editor_actions-remove js_remove-part"></div>
