--- a/app/src/main/resources/admin/orders/templates/ordersList.html
+++ b/app/src/main/resources/admin/orders/templates/ordersList.html
@@ -99,7 +99,7 @@
 
                         <div class="table-body_cell table-side_aligns salesreps-list-email_cell">
                             <span class="label">Дата заказа</span>
-                            <span class="value" data-th-text="${item.dates.createdTime}">
+                            <span class="value" data-th-text="${item.dates.transactionDate}">
                                 19.05.2018
                             </span>
                         </div>
