Update for statistics page

--- a/frontend/app/scss/pages/admin/_statistics.scss
+++ b/frontend/app/scss/pages/admin/_statistics.scss
@@ -1,24 +1,59 @@
+
+
+$colors: (
+	"blue": $color-primary3, 
+	"orange": $color-primary19, 
+	"red": $color-primary24, 
+	"green": $color-primary40, 
+	"grey": $color-primary28 );
+.statics-content {
+	@include tablet-all {
+		display: flex;
+		justify-content: space-between;
+	}
+}
+
+.statics_charts {
+	@include tablet-all {
+		flex: 0 1 49%;
+	}
+
+	@include mobile {
+		margin-bottom: 20px;
+	}
+
+	&-item {
+		padding: 15px;
+
+		@each $color-name, $color in $colors {
+			&.m-chart.m-#{$color-name} {
+				background-color: transparent;
+				border: 3px solid $color;
+			}
+		}
+
+		& + & {
+			margin-top: 20px;
+		}
+	}
+}
 .statics_grid {
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	grid-auto-flow: dense;
-	grid-gap: 20px;
+	@include tablet-all {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-auto-flow: dense;
+		grid-gap: 20px;
+		flex: 0 1 49%;
+	}
 
 	&-item {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		padding: 25px;
+		padding: 15px;
 		text-align: center;
 		font-family: $font-main-regular;
 		color: $color-primary1;
-		aspect-ratio: 1;
-
-		&.m-chart {
-			grid-column: span 3;
-			grid-row: span 2;
-			aspect-ratio: auto;
-		}
 
 		.label {
 			font-size: 14px;
@@ -31,24 +66,9 @@
 			line-height: 1.5;
 		}
 
-
-		$colors: (
-			"blue": $color-primary3, 
-			"orange": $color-primary19, 
-			"red": $color-primary24, 
-			"green": $color-primary40, 
-			"grey": $color-primary28 );
-
 		@each $color-name, $color in $colors {
 			&.m-#{$color-name} {
 				background-color: $color;
-				// background-color: mix($color, $color-primary1, $weight:40%);
-				// background-color: mix($color, $color-primary1, $weight:75%);
-			}
-			
-			&.m-chart.m-#{$color-name} {
-				background-color: transparent;
-				border: 3px solid $color;
 			}
 		}
 	}
