--- a/app/src/main/resources/site/pages/user/components/userEditModal.html
+++ b/app/src/main/resources/site/pages/user/components/userEditModal.html
@@ -29,17 +29,28 @@
                             data-th-placeholder="${portal.localize({'_key=myGames.form.discord.placeholder', '_locale=ru'})}"
                             type="text" data-ignore="true" disabled />
                     </div>
+                    <div class="form-group" data-th-unless="${discord}">
+                        <label class="label">Подключить дискорд</label>
+                        <a data-th-href="${discordUrl}" class="button social_login-discord">Discord</a></div>
                     <div class="form-group" data-th-if="${vk}">
                         <label class="label">VK</label>
                         <input data-th-value="${vk.first_name + ' ' + vk.last_name}"
                             data-th-placeholder="${portal.localize({'_key=myGames.form.vk.placeholder', '_locale=ru'})}"
                             type="text" data-ignore="true" disabled />
                     </div>
+                    <div class="form-group" data-th-unless="${vk}">
+                        <label class="label">Подключить VK</label>
+                        <a data-th-href="${vkUrl}" class="button social_login-vk">Вконтакте</a>
+                    </div>
                     <div class="form-group" data-th-if="${facebook}">
                         <label class="label">Facebook</label>
                         <input data-th-value="${facebook.first_name + ' ' + facebook.last_name}"
                             data-th-placeholder="${portal.localize({'_key=myGames.form.facebook.placeholder', '_locale=ru'})}"
                             type="text" data-ignore="true" disabled />
+                    </div>
+                    <div class="form-group" data-th-unless="${facebook}">
+                        <label class="label">Facebook</label>
+                        <button class="button social_login-fb">Facebook</button>
                     </div>
                     <div class="form-group">
                         <label for="city-user-input" class="label">Город</label>
