--- a/frontend/app/scss/main.scss
+++ b/frontend/app/scss/main.scss
@@ -51,7 +51,7 @@
 @import "pages/searchpage";
 @import "pages/gameReg";
 @import "pages/viewOrders";
-@import "pages/createArticle";
+@import "pages/createArticle/all";
 @import "pages/kosticon2020";
 @import "pages/kosticonnect";
 @import "pages/kosticonnect_games";
