--- a/app/src/main/resources/services/newArticle/components/image.html
+++ b/app/src/main/resources/services/newArticle/components/image.html
@@ -1,4 +1,4 @@
-<div data-th-class="${'create_article-image_editor js_image-editor image-editor js_single-part js_single-part-' + id}"
+<div data-th-class="${'create_article-image_editor editor_actions-wrap  js_image-editor image-editor js_single-part js_single-part-' + id}"
     data-th-attr="data-imageid=${image._id}, data-id=${id}">
     <img data-th-id="${'js_single-part-' + id}" data-th-src="${image.url}" />
     <div class="js_editable-div create_article-image_editor-caption js_img_caption" contenteditable="true"
@@ -6,9 +6,9 @@
         data-th-text="${caption != '' ? caption : 'Введите здесь подпись для картинки'}">
     </div>
     <input type="hidden" class="js_img_caption_input js_editable-div-value" data-th-value="${caption}" />
-    <div class="create_article-editor_actions">
-        <div class="create_article-editor_actions-remove js_remove-part"></div>
-        <div class="create_article-editor_actions-top js_move-part" data-type="top"></div>
-        <div class="create_article-editor_actions-bot js_move-part" data-type="bot"></div>
+    <div class="editor_actions">
+        <div class="editor_actions-remove js_remove-part"></div>
+        <div class="editor_actions-top js_move-part" data-type="top"></div>
+        <div class="editor_actions-bot js_move-part" data-type="bot"></div>
     </div>
 </div>
