--- a/app/src/main/resources/services/newArticle/components/video.html
+++ b/app/src/main/resources/services/newArticle/components/video.html
@@ -1,21 +1,21 @@
 <div data-th-if="${form}" data-th-attr="data-id=${id}"
-    data-th-class="${'create_article-video_editor js_video-editor js_single-part js_single-part-' + id}">
+    data-th-class="${'create_article-video_editor editor_actions-wrap js_video-editor js_single-part js_single-part-' + id}">
     <div data-th-remove="tag">
-        <input type="text" class="create_article-video_editor-input" />
-        <button type="text" class="create_article-video_editor-btn button button-dark">Загрузить видео</button>
+        <input type="text" class="create_article-video_editor-input" placeholder="Вставьте ссылку" />
+        <button type="text" class="create_article-action_btn button button-dark">Загрузить видео</button>
     </div>
-    <div class="create_article-editor_actions">
-        <div class="create_article-editor_actions-remove js_remove-part"></div>
-        <div class="create_article-editor_actions-top js_move-part" data-type="top"></div>
-        <div class="create_article-editor_actions-bot js_move-part" data-type="bot"></div>
+    <div class="editor_actions">
+        <div class="editor_actions-remove js_remove-part"></div>
+        <div class="editor_actions-top js_move-part" data-type="top"></div>
+        <div class="editor_actions-bot js_move-part" data-type="bot"></div>
     </div>
 </div>
 <div data-th-if="${videoId}" data-th-remove="${addWrapper ? 'none' : 'tag'}" data-th-attr="data-id=${id}"
-    data-th-class="${'create_article-video_editor js_video-editor js_single-part js_single-part-' + id}">
+    data-th-class="${'create_article-video_editor editor_actions-wrap js_video-editor js_single-part js_single-part-' + id}">
     <img data-th-src="${'https://img.youtube.com/vi/' + videoId + '/maxresdefault.jpg'}" data-th-attr="data-url=${url}">
-    <div class="create_article-editor_actions">
-        <div class="create_article-editor_actions-remove js_remove-part"></div>
-        <div class="create_article-editor_actions-top js_move-part" data-type="top"></div>
-        <div class="create_article-editor_actions-bot js_move-part" data-type="bot"></div>
+    <div class="editor_actions">
+        <div class="editor_actions-remove js_remove-part"></div>
+        <div class="editor_actions-top js_move-part" data-type="top"></div>
+        <div class="editor_actions-bot js_move-part" data-type="bot"></div>
     </div>
 </div>
