--- a/frontend/app/scss/pages/_kosticonnect.scss
+++ b/frontend/app/scss/pages/_kosticonnect.scss
@@ -13,7 +13,7 @@
     }
 
     &-header {
-        background-color: #443A97;
+        background-color: #2C1A46;
         flex: 0 0 auto;
     }
 
@@ -29,10 +29,11 @@
     }
 
     &-header_insert {
-        padding: 24px 0 32px;
-    
+        padding: 24px 0 0;
+        background-color: #2c1a46;
+
         @include tablet-all {
-            padding: 24px 0 64px;
+            padding: 24px 0 0;
         }
 
         .kosticonnect-title {
@@ -70,6 +71,7 @@
     }
 
     &-headline {
+        width: 320px;
 
         @include mobile-xs {
             flex: 1 1 50%;
@@ -80,7 +82,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 2px solid #EE1E5D;
+        border-bottom: 2px solid #E2211C;
         padding-bottom: 10px;
 
         @include tablet-all {
@@ -90,21 +92,6 @@
         div {
             max-width: 29%;
         }
-    }
-
-    &-left {
-        display: flex;
-        margin-right: 10px;
-    }
-
-    &-logo {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 55px;
-        width: 50px;
-        margin-right: 2px;
-        background: #EE205F;
     }
 
     &-title {
@@ -125,7 +112,7 @@
         }
     }
 
-    &-button  {
+    &-button {
         display: inline-block;
         font-family: 'Raleway', sans-serif;
         font-weight: bold;
@@ -137,8 +124,8 @@
         transition: all ease-out 0.2s;
 
         &.primary {
-            background: #EE1E5D;
-            border: 1px solid #EE1E5D;
+            background: #E2211C;
+            border: 1px solid #E2211C;
 
             &:hover {
                 @include tablet-all {
@@ -162,20 +149,20 @@
         }
 
         &.inverted {
-            border: 1px solid #EE1E5D;
+            border: 1px solid #E2211C;
             border-radius: 1px;
             background: transparent;
-            color: #EE1E5D;
+            color: #E2211C;
 
             &:hover,
             &:focus {
                 @include tablet-all {
                     color: #fff;
-                    background: #EE1E5D;
+                    background: #E2211C;
                 }
             }
         }
-    
+
         &.secondary {
             border: 1px solid #fff;
             border-radius: 1px;
@@ -184,8 +171,8 @@
             &:hover,
             &:focus {
                 @include tablet-all {
-                    border-color: #EE1E5D;
-                    color: #EE1E5D;
+                    border-color: #E2211C;
+                    color: #E2211C;
                 }
             }
         }
@@ -199,89 +186,40 @@
     }
 
     &-top {
-        background-color: #443A97;
+        background-color: #2C1A46;
         overflow: hidden;
+        display: none;
     }
 
     &-mid {
+        display: none;
         @include tablet-all {
             background: #fff;
             padding: 36px 0;
         }
 
         @include mobile {
-            background-color: #443a97;
+            background-color: #2C1A46;
         }
     }
 
     &-mid2 {
+        display: none;
+        background: #fff;
         padding: 28px 0 64px;
-    }
-} // END of .kosticonnect
-
-.fest_date {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: Roboto;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #fff;
-    background: #ee205f;
-    height: 55px;
-    padding: 10px;
-    letter-spacing: 0.03em;
-
-    @include mobile-xs {
-        padding: 0;
-        min-width: 65px;
-    }
-
-    &-day {
-        font-size: 17.4415px;
-        line-height: 21px;
-        white-space: nowrap;
-
-        @include mobile-xs {
-            font-size: 16px;
-        }
-    }
-    
-    &-month {
-        font-size: 10.4649px;
-        line-height: 14px;
     }
 }
 
+// END of .kosticonnect
+
 .hero_banner {
     position: relative;
-    margin-bottom: 25px;
-    padding-left: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 25px;
+    background-color: #2c1a46;
+    overflow: hidden;
 
     @include mobile {
-        margin: 0 -24px;
-    }
-
-    &:before {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        height: calc(100% - 10px);
-        background: #B21E43;
-        width: 10px;
-    }
-
-    &:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        height: 10px;
-        background: #B21E43;
-        width: calc(100% - 10px);
+        // margin: 0 -24px;
     }
 
     &-video_wrap {
@@ -289,12 +227,18 @@
 
         &:after {
             content: '';
-            background: rgba(0,0,0,0.4);
+            background: rgba(0, 0, 0, 0.5);
             position: absolute;
             left: 0;
             right: 0;
             top: 0;
             bottom: 0;
+        }
+
+        img {
+            height: 85vh;
+            width: 100%;
+            object-fit: cover;
         }
 
         video {
@@ -316,7 +260,8 @@
         padding: 20px 25px 48px;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
+        justify-content: center;
+        left: 0;
 
         @include tablet-all {
             padding: 30px 87px 40px;
@@ -338,12 +283,13 @@
         }
     }
 
-    &-tickets {
+    &-tickets,
+    &-participate {
         margin-right: 20px;
         margin-top: 10px;
     }
 
-    &-participate {
+    &-list {
         margin-top: 10px;
     }
 }
@@ -354,28 +300,6 @@
 
     @include tablet-all {
         padding-top: 136px;
-    }
-
-    &:before {
-        content: '';
-        position: absolute;
-        left: -28px;
-        top: 24px;
-        background: url(../images/kosticonnect/KOSTICONNECT.svg);
-        width: 100%;
-        height: 84px;
-        background-repeat: no-repeat;
-
-        @include mobile {
-            background-size: cover;
-            background-position: right;
-        }
-
-        @include tablet-all {
-            left: -60px;
-            top: 50px;
-            height: 170px;
-        }
     }
 
     &-list {
@@ -390,7 +314,7 @@
     &-item {
         flex: 0 1 50%;
         padding: 10px;
-        
+
         @include tablet-all {
             flex: 0 1 33%;
             padding: 16px;
@@ -408,7 +332,7 @@
             content: '';
             height: 2px;
             margin-top: 8px;
-            background: #F9A033;
+            background: #FF5B35;
             width: 100%;
             display: block;
         }
@@ -426,20 +350,22 @@
             }
         }
     }
-    
+
     &-label {
         position: absolute;
         left: 0;
         bottom: 8px;
         padding: 8px;
-        background: #EE1E5D;
+        background: #E2211C;
         color: #fff;
         font-family: 'Raleway', sans-serif;
         font-weight: bold;
         font-size: 16px;
         line-height: 1.5;
     }
-} //end of hightlights
+}
+
+//end of hightlights
 
 .fest_program {
     overflow: hidden;
@@ -450,12 +376,12 @@
         font-weight: 900;
         font-size: 20px;
         line-height: 1.55;
-        color: #11090F;
+        color: #fff;
         position: relative;
         padding-top: 48px;
         padding-bottom: 48px;
         padding-right: 15px;
-        background-color: #fff;
+        background-color: #3D2B57;
         display: inline-block;
 
         @include tablet-all {
@@ -470,23 +396,23 @@
             width: 100%;
             top: 0;
             z-index: 1;
-            background: #fff;
+            background: #3D2B57;
             right: 100%;
         }
 
         .link {
-            color: #EE205F;
-            border-bottom: 4px solid #EE205F;
+            color: #E2211C;
+            border-bottom: 4px solid #E2211C;
 
             &:hover {
-                color: lighten( #EE205F, 15%);
-                border-color: lighten( #EE205F, 15%);
+                color: lighten(#E2211C, 15%);
+                border-color: lighten(#E2211C, 15%);
             }
         }
 
         // &:after {
         //   content: "";
-        //   background: #F9A033;
+        //   background: #FF5B35;
         //   height: 2px;
 
         //   @include mobile {
@@ -530,8 +456,7 @@
         display: flex;
         flex-direction: column;
         margin-top: 87px;
-        background: #1E1852;
-        background-image: url(../images/kosticonnect/SNAKECITY.svg);
+        background: #1D1A34;
         background-repeat: no-repeat;
         background-position: 139% 87%;
         background-size: 76%;
@@ -552,7 +477,7 @@
     }
 
     &-item {
-        background: #fff;
+        background: #3D2B57;
         padding: 40px 32px;
         flex: 0 1 32%;
         max-width: 329px;
@@ -567,7 +492,7 @@
             }
         }
 
-        & + & {
+        &+& {
             @include mobile {
                 margin-top: 24px;
             }
@@ -582,6 +507,7 @@
 
         &.sold-out {
             position: relative;
+            background: #fff;
         }
     }
 
@@ -617,11 +543,11 @@
             width: 10px;
 
             .regular & {
-                background: #443A97;
+                background: #2C1A46;
             }
 
             .turbo & {
-                background: #EE205F;
+                background: #E2211C;
             }
         }
 
@@ -634,11 +560,11 @@
             width: calc(100% - 10px);
 
             .regular & {
-                background: #443A97;
+                background: #2C1A46;
             }
 
             .turbo & {
-                background: #EE205F;
+                background: #E2211C;
             }
         }
     }
@@ -648,7 +574,7 @@
         font-weight: 900;
         font-size: 24px;
         line-height: 1.2;
-        color: #11090F;
+        color: #fff;
         padding-bottom: 8px;
     }
 
@@ -659,7 +585,7 @@
         line-height: 1.4;
         color: #fff;
         padding: 6px 8px;
-        background: #1E1852;
+        background: #1D1A34;
         display: inline-block;
         margin-bottom: 32px;
     }
@@ -677,20 +603,21 @@
                 content: '';
                 width: 8px;
                 height: 8px;
-                background: #f9a033;
+                background: #FF5B35;
                 position: absolute;
                 left: 0;
                 margin-top: 6px;
             }
         }
 
-        li + li {
+        li+li {
             margin-top: 8px;
         }
     }
 
     &-ticket_desc {
         margin-bottom: 22px;
+        color: #fff;
     }
 
     &-actions {
@@ -748,7 +675,7 @@
 
     &-msg {
         padding: 8px;
-        background: #EE205F;
+        background: #E2211C;
         font-family: Raleway;
         font-weight: 900;
         color: #FFFFFF;
@@ -778,7 +705,7 @@
         font-weight: 900;
         font-size: 32px;
         line-height: 1.35;
-        color: #F9A033;
+        color: #FF5B35;
         padding-bottom: 24px;
 
         @include mobile-xs {
@@ -878,7 +805,7 @@
         padding-bottom: 54px;
     }
 
-    
+
     &-masters {
         margin-right: 10px;
         margin-top: 10px;
@@ -900,7 +827,9 @@
     &-media {
         margin-top: 10px;
     }
-} //end of .attend
+}
+
+//end of .attend
 
 .participants,
 .games {
@@ -1006,8 +935,9 @@
         }
     }
 }
+
 .k_faq {
-    background: #443A97;
+    background: #2C1A46;
     color: #fff;
     overflow: hidden;
 
@@ -1041,7 +971,7 @@
         }
 
         &:after {
-            background: #1e1852;
+            background: #1D1A34;
             margin-top: 105px;
         }
     }
@@ -1072,14 +1002,14 @@
             padding-right: 8px;
 
             .active & {
-                border-color: #F9A033;
+                border-color: #FF5B35;
             }
 
             &:hover {
-                color: #F9A033;
+                color: #FF5B35;
 
                 &:after {
-                    border-top-color: #F9A033;
+                    border-top-color: #FF5B35;
                 }
             }
 
@@ -1116,7 +1046,8 @@
 }
 
 .follow_us {
-    background: #1E1852;
+    display: none;
+    background: #1D1A34;
 
     .site_content {
         @include desktop {
@@ -1140,10 +1071,10 @@
         font-size: 48px;
         line-height: 1.2;
         text-transform: uppercase;
-        color: #1E1852;
-        text-shadow: -1px 0 #F9A033, 0 1px #F9A033, 1px 0 #F9A033, 0 -1px #F9A033;
+        color: #1D1A34;
+        text-shadow: -1px 0 #FF5B35, 0 1px #FF5B35, 1px 0 #FF5B35, 0 -1px #FF5B35;
 
-        & + & {
+        &+& {
             @include mobile {
                 margin-top: 15px;
             }
@@ -1164,7 +1095,8 @@
 }
 
 .fest_contacts {
-    background-color: #443A97;
+    display: none;
+    background-color: #2C1A46;
     flex: 0 0 auto;
 
     .site_content {
@@ -1229,7 +1161,7 @@
     }
 
     &-link {
-        color: #F9A033;
+        color: #FF5B35;
 
         &:hover {
             text-decoration: underline;
