--- a/frontend/app/scss/pages/_kosticonnect_games.scss
+++ b/frontend/app/scss/pages/_kosticonnect_games.scss
@@ -23,7 +23,7 @@
         font-size: 24px;
         line-height: 1.3;
         font-feature-settings: 'pnum'on, 'lnum'on;
-        color: #443A97;
+        color: #2C1A46;
         padding-bottom: 24px;
 
         @include tablet-all {
@@ -70,7 +70,7 @@
         line-height: 1.8;
         color: #FFFFFF;
         bottom: 8px;
-        background: #EE205F;
+        background: #E2211C;
         text-transform: uppercase;
     }
 
@@ -94,7 +94,7 @@
         font-weight: bold;
         font-size: 16px;
         line-height: 1.5;
-        background: #F9A033;
+        background: #FF5B35;
         padding: 8px;
         display: flex;
         align-items: center;
@@ -134,7 +134,7 @@
         font-weight: bold;
         font-size: 16px;
         line-height: 1.45;
-        color: #EE205F;
+        color: #E2211C;
 
         &:hover {
             opacity: 0.8;
@@ -147,7 +147,7 @@
         &:after {
             content: "";
             height: 2px;
-            background: #F9A033;
+            background: #FF5B35;
             display: block;
             margin-top: 8px;
             width: 64%;
@@ -159,7 +159,7 @@
         font-weight: bold;
         font-size: 16px;
         line-height: 1.45;
-        color: #443A97;
+        color: #2C1A46;
         padding-top: 8px;
     }
 
@@ -169,7 +169,7 @@
         &-link {
             width: 58px;
             height: 52px;
-            background: #EE205F;
+            background: #E2211C;
             border-radius: 1px;
             text-align: center;
             display: inline-block;
@@ -185,7 +185,7 @@
 
             &.active .k_games-pagination-link,
             &:hover .k_games-pagination-link {
-                background: #1E1852;
+                background: #1D1A34;
             }
 
             &+.k_games-pagination-item {
@@ -205,6 +205,10 @@
             font-size: 16px;
             line-height: 1.2;
         }
+    }
+
+    &-my_games_btn {
+        padding-top: 40px;
     }
 
     &-filters {
@@ -250,7 +254,7 @@
                 position: absolute;
                 height: 4px;
                 width: 50%;
-                background: #EE205F;
+                background: #E2211C;
                 opacity: 1;
                 transform: rotate(0deg);
                 transition: .25s ease-in-out;
@@ -334,7 +338,7 @@
 
         &-item {
             @include tablet-all {
-                flex: 0 1 24%;
+                flex: 0 1 32%;
             }
 
             &+& {
@@ -355,12 +359,12 @@
 
         &-select {
             select {
-                border: 1px solid #1E1852;
+                border: 1px solid #1D1A34;
                 border-radius: 0;
             }
 
             &:after {
-                border-top-color: #EE205F;
+                border-top-color: #E2211C;
             }
         }
     }
@@ -383,7 +387,7 @@
         font-weight: 900;
         font-size: 20px;
         line-height: 1.6;
-        color: #EE205F;
+        color: #E2211C;
         padding-bottom: 8px;
     }
 
@@ -422,7 +426,7 @@
         font-weight: bold;
         font-size: 16px;
         line-height: 1.5;
-        color: #443A97;
+        color: #2C1A46;
     }
 
     &-value {
@@ -439,28 +443,6 @@
 
     &-img_decor {
         position: relative;
-        padding-left: 10px;
-        padding-bottom: 10px;
-
-        &:before {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            height: calc(100% - 10px);
-            background: #B21E43;
-            width: 10px;
-        }
-
-        &:after {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            height: 10px;
-            background: #B21E43;
-            width: calc(100% - 10px);
-        }
     }
 
     &-img_wrap {
@@ -492,7 +474,7 @@
         }
 
         input {
-            border: 1px solid #1e1852;
+            border: 1px solid #1D1A34;
             border-radius: 0;
             margin-bottom: 10px;
         }
@@ -508,7 +490,7 @@
         margin-bottom: 25px;
     }
 
-    &-actions{
+    &-actions {
         @include mobile {
             display: flex;
             flex-direction: column;
@@ -516,11 +498,12 @@
     }
 
     &-back {
-        .k_gdp-sign_up-btn + & {
+        .k_gdp-sign_up-btn+& {
             @include mobile {
                 margin-top: 25px;
             }
         }
+
         span {
             display: inline-block;
             vertical-align: middle;
@@ -539,20 +522,21 @@
 
     &-agreement {
         margin-bottom: 25px;
-        .label-checkbox:hover:before, 
+
+        .label-checkbox:hover:before,
         [type=checkbox]:checked+.label-checkbox:before {
-            border-color: #443a97;
+            border-color: #2C1A46;
         }
+
         .label-checkbox:after {
-            background: url("data:image/svg+xml;charset=utf8,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' fill='%23443a97' x='0px' y='0px' viewBox='0 0 31 31' style='enable-background:new 0 0 31 31;' xml:space='preserve'%3E%3Cpath class='st0' d='M23,2'/%3E%3Cpath class='st0' d='M7,2'/%3E%3Cg%3E%3Cg id='chevron-right'%3E%3Cpolygon points='31,7.9 27.4,4.3 12.1,19.6 3.5,11 0,14.6 12.2,26.7'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E")
-            no-repeat center;
+            background: url("data:image/svg+xml;charset=utf8,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' fill='%23443a97' x='0px' y='0px' viewBox='0 0 31 31' style='enable-background:new 0 0 31 31;' xml:space='preserve'%3E%3Cpath class='st0' d='M23,2'/%3E%3Cpath class='st0' d='M7,2'/%3E%3Cg%3E%3Cg id='chevron-right'%3E%3Cpolygon points='31,7.9 27.4,4.3 12.1,19.6 3.5,11 0,14.6 12.2,26.7'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E") no-repeat center;
         }
 
         a {
-            color: #443a97;
+            color: #2C1A46;
         }
     }
-    
+
 }
 
 .custom_select {
@@ -580,7 +564,7 @@
     }
 
     &-selected {
-        border: 1px solid #1e1852;
+        border: 1px solid #1D1A34;
         min-height: 56px;
         padding: 4px 26px 14px 8px;
         position: relative;
@@ -590,7 +574,7 @@
 
         &:after {
             border: 4px solid transparent;
-            border-top-color: #ee205f;
+            border-top-color: #E2211C;
             border-bottom-width: 0;
             border-top-width: 6px;
             position: absolute;
@@ -608,7 +592,7 @@
     }
 
     &-selected_item {
-        background: #EE205F;
+        background: #E2211C;
         color: #fff;
         padding: 4px;
         display: inline-block;
@@ -617,7 +601,7 @@
         margin-top: 10px;
 
         &:hover {
-            background-color: darken(#EE205F, 20%);
+            background-color: darken(#E2211C, 20%);
         }
     }
 
