--- a/frontend/app/scss/pages/_myGamesStep1-2.scss
+++ b/frontend/app/scss/pages/_myGamesStep1-2.scss
@@ -308,17 +308,17 @@
             padding: 40px 0;
             box-shadow: 0 5px 15px 0 rgba($color-primary21, 0.05);
         }
-        
+
         &-list,
         &-empty {
             padding: 15px 20px 0;
-    
+
             @include tablet-all {
                 padding: 15px 40px 0;
             }
         }
 
-        &-item + &-item {
+        &-item+&-item {
             margin-top: 15px;
         }
 
@@ -327,11 +327,11 @@
             font-weight: bold;
             font-size: 16px;
             line-height: 1.45;
-            color: #443A97;
+            color: #2C1A46;
             padding-top: 8px;
 
             &:hover {
-                color: lighten(#443A97, 20)
+                color: lighten(#2C1A46, 20)
             }
         }
     }
