--- a/frontend/app/scss/pages/_kosticonnect.scss
+++ b/frontend/app/scss/pages/_kosticonnect.scss
@@ -188,11 +188,9 @@
     &-top {
         background-color: #2C1A46;
         overflow: hidden;
-        display: none;
     }
 
     &-mid {
-        display: none;
         @include tablet-all {
             background: #fff;
             padding: 36px 0;
@@ -204,7 +202,6 @@
     }
 
     &-mid2 {
-        display: none;
         background: #fff;
         padding: 28px 0 64px;
     }
@@ -655,7 +652,6 @@
     }
 
     &-msg_wrap {
-        display: none;
         position: absolute;
         z-index: 2;
         margin: 0 auto;
@@ -1046,7 +1042,6 @@
 }
 
 .follow_us {
-    display: none;
     background: #1D1A34;
 
     .site_content {
@@ -1095,7 +1090,6 @@
 }
 
 .fest_contacts {
-    display: none;
     background-color: #2C1A46;
     flex: 0 0 auto;
 
@@ -1178,4 +1172,92 @@
     @include desktop {
         padding: 0 59px;
     }
+}
+
+//
+//
+//
+//KANSIN STYLES
+//
+//
+//
+//
+
+
+.banner-img {
+    width: 100%;
+    height: 650px;
+    object-fit: cover;
+}
+
+.kmg-add img {
+    min-height: 570px;
+    max-width: 80%;
+
+}
+
+.kmg-add .attend-actions {
+    text-align: center;
+
+}
+
+.kmg-add ol {
+    list-style: decimal;
+
+}
+
+.kmg-reverce .attend-content {
+
+    left: 0;
+}
+
+.kmg-reverce .attend {
+    flex-direction: row-reverse;
+    margin-bottom: 30px;
+}
+
+.kmg-reverce img {
+    max-width: 80%;
+    margin-left: 20%;
+}
+
+.kmg-location {
+    background: #fff;
+}
+
+.kmg-locatio .attend {
+
+    margin-bottom: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .kmg .attend {
+        flex-direction: column-reverse;
+        overflow: hidden;
+    }
+
+    .kmg img {
+        max-width: 100%;
+        width: 100%;
+        object-fit: cover;
+        margin-left: 0;
+
+    }
+
+    .kmg .attend-content {
+
+        margin-left: 0;
+
+    }
+
+    .kmg-hero-banner {
+        margin: 0 0;
+    }
+
+    .banner-img {
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+    }
+
 }
