User games registrarion form& admin action button

--- a/frontend/app/scss/main.scss
+++ b/frontend/app/scss/main.scss
@@ -7,6 +7,7 @@
 @import "utilities/mixins";
 @import "utilities/helpers";
 @import "utilities/mediaQuery";
+@import "utilities/hover-supported";
 
 @import "base/base";
 @import "base/buttons";
