--- a/frontend/app/scss/utilities/_variables.scss
+++ b/frontend/app/scss/utilities/_variables.scss
@@ -37,6 +37,11 @@ $color-primary38: #3c1206;
 $color-primary39: #091e42;
 $color-primary40: #43a047;
 
+//kosticonnect
+$kosticonnect-primary1: #e2211c;
+$kosticonnect-primary2: #11090f;
+$kosticonnect-primary3: #2c1a46;
+
 ///
 ///Social colors
 ///
