--- a/frontend/app/scss/pages/_kosticonnect.scss
+++ b/frontend/app/scss/pages/_kosticonnect.scss
@@ -13,7 +13,7 @@
     }
 
     &-header {
-        background-color: #2C1A46;
+        background-color: $kosticonnect-primary3;
         flex: 0 0 auto;
     }
 
@@ -30,7 +30,7 @@
 
     &-header_insert {
         padding: 24px 0 0;
-        background-color: #2c1a46;
+        background-color: $kosticonnect-primary3;
 
         @include tablet-all {
             padding: 24px 0 0;
@@ -82,7 +82,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 2px solid #E2211C;
+        border-bottom: 2px solid $kosticonnect-primary1;
         padding-bottom: 10px;
 
         @include tablet-all {
@@ -99,7 +99,7 @@
         font-weight: 900;
         font-size: 40px;
         line-height: 1.2;
-        color: #fff;
+        color: $color-primary1;
         padding-bottom: 55px;
 
         @include mobile-xs {
@@ -119,13 +119,13 @@
         font-size: 16px;
         line-height: 1.2;
         padding: 16px 24px;
-        color: #fff;
+        color: $color-primary1;
         text-transform: uppercase;
         transition: all ease-out 0.2s;
 
         &.primary {
-            background: #E2211C;
-            border: 1px solid #E2211C;
+            background: $kosticonnect-primary1;
+            border: 1px solid $kosticonnect-primary1;
 
             &:hover {
                 @include tablet-all {
@@ -149,30 +149,30 @@
         }
 
         &.inverted {
-            border: 1px solid #E2211C;
+            border: 1px solid $kosticonnect-primary1;
             border-radius: 1px;
             background: transparent;
-            color: #E2211C;
+            color: $kosticonnect-primary1;
 
             &:hover,
             &:focus {
                 @include tablet-all {
-                    color: #fff;
-                    background: #E2211C;
+                    color: $color-primary1;
+                    background: $kosticonnect-primary1;
                 }
             }
         }
 
         &.secondary {
-            border: 1px solid #fff;
+            border: 1px solid $color-primary1;
             border-radius: 1px;
             background: transparent;
 
             &:hover,
             &:focus {
                 @include tablet-all {
-                    border-color: #E2211C;
-                    color: #E2211C;
+                    border-color: $kosticonnect-primary1;
+                    color: $kosticonnect-primary1;
                 }
             }
         }
@@ -180,29 +180,29 @@
 
     &-content {
         .kosticonnect-title {
-            color: #11090F;
+            color: $kosticonnect-primary2;
             padding: 24px 0;
         }
     }
 
     &-top {
-        background-color: #2C1A46;
+        background-color: $kosticonnect-primary3;
         overflow: hidden;
     }
 
     &-mid {
         @include tablet-all {
-            background: #fff;
+            background: $color-primary1;
             padding: 36px 0;
         }
 
         @include mobile {
-            background-color: #2C1A46;
+            background-color: $kosticonnect-primary3;
         }
     }
 
     &-mid2 {
-        background: #fff;
+        background: $color-primary1;
         padding: 28px 0 64px;
     }
 }
@@ -212,7 +212,7 @@
 .hero_banner {
     position: relative;
     padding-bottom: 25px;
-    background-color: #2c1a46;
+    background-color: $kosticonnect-primary3;
     overflow: hidden;
 
     @include mobile {
@@ -263,7 +263,7 @@
     }
 
     &-title {
-        color: #fff;
+        color: $color-primary1;
         width: 100%;
         text-transform: uppercase;
         padding: 0;
@@ -316,7 +316,7 @@
         font-family: "Roboto";
         font-size: 14px;
         line-height: 1.4;
-        color: #fff;
+        color: $color-primary1;
         padding-top: 16px;
 
         &:after {
@@ -347,8 +347,8 @@
         left: 0;
         bottom: 8px;
         padding: 8px;
-        background: #E2211C;
-        color: #fff;
+        background: $kosticonnect-primary1;
+        color: $color-primary1;
         font-family: 'Raleway', sans-serif;
         font-weight: bold;
         font-size: 16px;
@@ -367,7 +367,7 @@
         font-weight: 900;
         font-size: 20px;
         line-height: 1.55;
-        color: #fff;
+        color: $color-primary1;
         position: relative;
         padding-top: 48px;
         padding-bottom: 48px;
@@ -392,12 +392,12 @@
         }
 
         .link {
-            color: #E2211C;
-            border-bottom: 4px solid #E2211C;
+            color: $kosticonnect-primary1;
+            border-bottom: 4px solid $kosticonnect-primary1;
 
             &:hover {
-                color: lighten(#E2211C, 15%);
-                border-color: lighten(#E2211C, 15%);
+                color: lighten($kosticonnect-primary1, 15%);
+                border-color: lighten($kosticonnect-primary1, 15%);
             }
         }
 
@@ -435,7 +435,7 @@
     }
 
     &-title {
-        color: #fff;
+        color: $color-primary1;
         padding: 0 24px;
 
         @include tablet-all {
@@ -498,7 +498,7 @@
 
         &.sold-out {
             position: relative;
-            background: #fff;
+            background: $color-primary1;
         }
     }
 
@@ -506,7 +506,7 @@
         font-family: "Roboto";
         font-size: 16px;
         line-height: 1.5;
-        color: #fff;
+        color: $color-primary1;
         margin: 0;
         background: transparent;
         padding: 56px 0 48px;
@@ -534,11 +534,11 @@
             width: 10px;
 
             .regular & {
-                background: #2C1A46;
+                background: $kosticonnect-primary3;
             }
 
             .turbo & {
-                background: #E2211C;
+                background: $kosticonnect-primary1;
             }
         }
 
@@ -551,11 +551,11 @@
             width: calc(100% - 10px);
 
             .regular & {
-                background: #2C1A46;
+                background: $kosticonnect-primary3;
             }
 
             .turbo & {
-                background: #E2211C;
+                background: $kosticonnect-primary1;
             }
         }
     }
@@ -565,7 +565,7 @@
         font-weight: 900;
         font-size: 24px;
         line-height: 1.2;
-        color: #fff;
+        color: $color-primary1;
         padding-bottom: 8px;
     }
 
@@ -574,7 +574,7 @@
         font-weight: 900;
         font-size: 20px;
         line-height: 1.4;
-        color: #fff;
+        color: $color-primary1;
         padding: 6px 8px;
         background: #1D1A34;
         display: inline-block;
@@ -586,7 +586,7 @@
             font-family: "Roboto";
             font-size: 14px;
             line-height: 1.45;
-            color: #11090F;
+            color: $kosticonnect-primary2;
             position: relative;
             padding-left: 16px;
 
@@ -608,7 +608,7 @@
 
     &-ticket_desc {
         margin-bottom: 22px;
-        color: #fff;
+        color: $color-primary1;
     }
 
     &-actions {
@@ -622,13 +622,13 @@
         margin-top: 10px;
 
         .select {
-            border: 1px solid #11090F;
+            border: 1px solid $kosticonnect-primary2;
             border-radius: 0;
 
             &:focus {
                 box-shadow: none;
-                border-color: #11090f;
-                outline: 1px solid #11090f;
+                border-color: $kosticonnect-primary2;
+                outline: 1px solid $kosticonnect-primary2;
             }
 
             .sold-out & {
@@ -665,10 +665,10 @@
 
     &-msg {
         padding: 8px;
-        background: #E2211C;
+        background: $kosticonnect-primary1;
         font-family: Raleway;
         font-weight: 900;
-        color: #FFFFFF;
+        color: $color-primary1;
         font-size: 30px;
         line-height: 28px;
 
@@ -737,7 +737,7 @@
         font-family: "Roboto";
         font-size: 16px;
         line-height: 1.5;
-        color: #fff;
+        color: $color-primary1;
     }
 }
 
@@ -767,7 +767,7 @@
     }
 
     &-content {
-        background: #fff;
+        background: $color-primary1;
         padding: 50px 26px 40px;
 
         @include tablet-all {
@@ -783,13 +783,13 @@
     }
 
     &-title {
-        color: #11090F;
+        color: $kosticonnect-primary2;
         padding-bottom: 40px;
     }
 
     &-disc {
         font-family: "Roboto";
-        color: #11090F;
+        color: $kosticonnect-primary2;
         font-size: 16px;
         line-height: 1.5;
         padding-bottom: 54px;
@@ -857,7 +857,7 @@
     }
 
     &-title {
-        color: #11090F;
+        color: $kosticonnect-primary2;
     }
 
     &-link {
@@ -877,7 +877,7 @@
     padding: 48px 0 0;
 
     &-title {
-        color: #fff;
+        color: $color-primary1;
     }
 }
 
@@ -888,7 +888,7 @@
         font-weight: 900;
         font-size: 24px;
         line-height: 1.3;
-        color: #11090F;
+        color: $kosticonnect-primary2;
         padding-bottom: 16px;
 
         @include mobile-xs {
@@ -899,7 +899,7 @@
     &-text {
         font-family: "Roboto";
         font-size: 16px;
-        color: #11090F;
+        color: $kosticonnect-primary2;
     }
 
     &-list {
@@ -927,8 +927,8 @@
 }
 
 .k_faq {
-    background: #2C1A46;
-    color: #fff;
+    background: $kosticonnect-primary3;
+    color: $color-primary1;
     overflow: hidden;
 
     .site_content {
@@ -1084,7 +1084,7 @@
 }
 
 .fest_contacts {
-    background-color: #2C1A46;
+    background-color: $kosticonnect-primary3;
     flex: 0 0 auto;
 
     .site_content {
@@ -1113,7 +1113,7 @@
     }
 
     .social-link {
-        color: #fff;
+        color: $color-primary1;
         margin-top: 30px;
 
         @include mobile {
@@ -1144,7 +1144,7 @@
     }
 
     &-title {
-        color: #fff;
+        color: $color-primary1;
         padding-bottom: 20px;
     }
 
@@ -1216,7 +1216,7 @@
 }
 
 .kmg-location {
-    background: #fff;
+    background: $color-primary1;
 }
 
 .kmg-locatio .attend {
