--- a/frontend/app/scss/pages/_myGamesStep1-2.scss
+++ b/frontend/app/scss/pages/_myGamesStep1-2.scss
@@ -158,7 +158,7 @@
 
                 #{$parent}-name,
                 #{$parent}-qty {
-                    color: #fff;
+                    color: $color-primary1;
                 }
             }
         }
@@ -174,7 +174,7 @@
             margin: 10px 0 0;
             padding: 16px 16px 16px 45px;
             border-radius: 4px;
-            background-color: #ffffff;
+            background-color: $color-primary1;
             border: 1px solid #dedede;
             border-left: 4px solid #ed1f2e;
             box-shadow: 0 2px 8px 0 #0000000a;
@@ -240,21 +240,21 @@
 
         &-primary {
             background: #0095f8;
-            color: #ffffff;
+            color: $color-primary1;
             border: 3px solid #0095f8;
             margin-right: 15px;
 
             &:hover {
-                background: #fff;
+                background: $color-primary1;
                 color: #0095f8;
             }
         }
 
         &-secondary {
-            background: #fff;
+            background: $color-primary1;
             color: #0095f8;
             text-transform: none;
-            border: 3px solid #fff;
+            border: 3px solid $color-primary1;
 
             &:hover {
                 border-color: #0095f8;
@@ -304,7 +304,7 @@
 
     &-signed {
         &-wrapper {
-            background-color: #fff;
+            background-color: $color-primary1;
             padding: 40px 0;
             box-shadow: 0 5px 15px 0 rgba($color-primary21, 0.05);
         }
@@ -327,11 +327,11 @@
             font-weight: bold;
             font-size: 16px;
             line-height: 1.45;
-            color: #2C1A46;
+            color: $kosticonnect-primary3;
             padding-top: 8px;
 
             &:hover {
-                color: lighten(#2C1A46, 20)
+                color: lighten($kosticonnect-primary3, 20)
             }
         }
     }
